Added a test for class IsothermalSinglePhase : 2D Riemann problem with oblique velocity

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -77,6 +77,7 @@ CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DRiemannProblem_Ce
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DRiemannProblem_PStaggered.py "Python fv isothermalsinglephase 1D riemann implicit pstaggered structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DRiemannProblem_PStaggered_symmetric.py "Python fv isothermalsinglephase 1D riemann implicit pstaggered structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DRiemannProblem_PStaggered_symmetric.py "Python fv isothermalsinglephase 2D riemann implicit pstaggered structured coreflows")
+CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_2DRiemannProblem_PStaggered_oblique.py "Python fv isothermalsinglephase 2D riemann implicit pstaggered structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_upwind.py "Python fv isothermalsinglephase 1D gravity implicit upwind structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_Incompressible.py "Python fv isothermalsinglephase 1D gravity implicit pstaggered inlet outlet structured coreflows")
 CreatePythonTest(IsothermalSinglePhase/IsothermalSinglePhase_1DChannelGravity_Incompressible_Wall.py "Python fv isothermalsinglephase 1D gravity implicit pstaggered wall structured coreflows")
