--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -86,6 +86,7 @@ CreateTestExecAndInstall(IsothermalSinglePhase_1DRiemannProblem.cxx  "${libs_for
 CreateTestExecAndInstall(IsothermalSinglePhase_1DRiemannProblem_Implicit.cxx  "${libs_for_tests}" "C++ fv isothermalsinglephase 1D implicit upwind riemann structured coreflows" )
 CreateTestExecAndInstall(IsothermalSinglePhase_1DChannelGravity_Incompressible.cxx "${libs_for_tests}" "C++ fv isothermalsinglephase 1D incompressible implicit staggered gravity structured coreflows" )
 CreateTestExecAndInstall(IsothermalSinglePhase_2DLidDrivenCavity_Incompressible.cxx "${libs_for_tests}" "C++ fv isothermalsinglephase 1D incompressible  implicit staggered viscosity structured coreflows" )
+CreateTestExecAndInstall(IsothermalSinglePhase_2DPoiseuilleFlow.cxx "${libs_for_tests}" "C++ fv isothermalsinglephase 1D incompressible  implicit staggered viscosity structured coreflows" )
 
 CreateTestExecAndInstall(DriftModel_1DBoilingAssembly.cxx  "${libs_for_tests}" "C++ fv driftmodel 1D heating boiling structured coreflows" )
 CreateTestExecAndInstall(DriftModel_1DBoilingChannel.cxx  "${libs_for_tests}" "C++ fv driftmodel 1D heating boiling structured coreflows" )
