Added 2D test for diffusion equation

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -63,13 +63,25 @@ file(COPY ${pythonTestFiles} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}
 
 CreatePythonTest(DiffusionEquation/DiffusionEquation_1DHeatedRod.py "Python fv diffusion 1D heating structured coreflows")
 CreatePythonTest(DiffusionEquation/DiffusionEquation_1DHeatedRod_FE.py "Python fe diffusion 1D heating structured coreflows")
-add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2DSpherical.py 1)
+set(FE 1)
+set(FV 0)
+set(DirichletBC 1)
+set(NeumannBC 0)
+add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2DSpherical.py ${FE})
   set_property (TEST DiffusionEquation/DiffusionEquation_2DSpherical_FE PROPERTY LABELS "Python fe diffusion riemann 2D heating structured coreflows")     
-add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2DSpherical.py 0)
+add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2DSpherical.py ${FV})
   set_property (TEST DiffusionEquation/DiffusionEquation_2DSpherical_FV PROPERTY LABELS "Python fv diffusion riemann 2D heating structured coreflows")     
-add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py 0)
+add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FV} ${NeumannBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows")  
+add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FE} ${NeumannBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows")  
+add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FV} ${DirichletBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows")  
+add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FE} ${DirichletBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows")  
+add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py ${FV} ${NeumannBC})
   set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D BALL heating unstructured tetrahedra coreflows")  
-add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py 1)
+add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py ${FE} ${NeumannBC})
   set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D BALL heating unstructured tetrahedra coreflows")  
 
 
