Added extension to C++ diffusion test name

--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -57,14 +57,14 @@ add_executable(DiffusionEquation_2D_SQUARE_Implicit.exe DiffusionEquation_2D_SQU
 target_link_libraries(DiffusionEquation_2D_SQUARE_Implicit.exe CoreFlowsLibs )
 install(TARGETS DiffusionEquation_2D_SQUARE_Implicit.exe DESTINATION share/examples)
 
-add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FE_Neumann         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FE NEUMANN )     
-  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FE_Neumann PROPERTY LABELS "C++ diffusion heating 2D fe Neumann squares SQUARE coreflows")     
-add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FE_Dirichlet         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FE Dirichlet )     
-  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FE_Dirichlet PROPERTY LABELS "C++ diffusion heating 2D fe Dirichlet squares SQUARE coreflows")     
-add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FV_Neumann         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FV Neumann )     
-  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FV_Neumann PROPERTY LABELS "C++ diffusion heating 2D fv Neumann squares SQUARE coreflows")     
-add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FV_Dirichlet         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FV DIRICHLET )     
-  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FV_Dirichlet PROPERTY LABELS "C++ diffusion heating 2D fv Dirichlet squares SQUARE coreflows")     
+add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FE_Neumann.exe         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FE NEUMANN )     
+  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FE_Neumann.exe PROPERTY LABELS "C++ diffusion heating 2D fe Neumann squares SQUARE coreflows")     
+add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FE_Dirichlet.exe         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FE Dirichlet )     
+  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FE_Dirichlet.exe PROPERTY LABELS "C++ diffusion heating 2D fe Dirichlet squares SQUARE coreflows")     
+add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FV_Neumann.exe         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FV Neumann )     
+  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FV_Neumann.exe PROPERTY LABELS "C++ diffusion heating 2D fv Neumann squares SQUARE coreflows")     
+add_test(NAME DiffusionEquation_2D_SQUARE_Implicit_FV_Dirichlet.exe         COMMAND ./DiffusionEquation_2D_SQUARE_Implicit.exe FV DIRICHLET )     
+  set_property (TEST DiffusionEquation_2D_SQUARE_Implicit_FV_Dirichlet.exe PROPERTY LABELS "C++ diffusion heating 2D fv Dirichlet squares SQUARE coreflows")     
 
 CreateTestExecAndInstall(StationaryDiffusionEquation_2DEF_StructuredTriangles.cxx  "${libs_for_tests}" "C++ fe stationary diffusion 2D dirichlet structured triangles coreflows" )
 CreateTestExecAndInstall(StationaryDiffusionEquation_2DEF_StructuredTriangles_Neumann.cxx  "${libs_for_tests}" "C++ fe stationary diffusion 2D neumann structured triangles coreflows" )
