Added diffusion test on 3D ball with Dirichlet boundary conditions

--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -72,17 +72,21 @@ add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FE ${PYTHON_EXECUTABLE}
 add_test(DiffusionEquation/DiffusionEquation_2DSpherical_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2DSpherical.py ${FV})
   set_property (TEST DiffusionEquation/DiffusionEquation_2DSpherical_FV PROPERTY LABELS "Python fv diffusion riemann 2D heating structured coreflows")     
 add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FV} ${NeumannBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows Neumann")  
 add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FE} ${NeumannBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows Neumann")  
 add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FV} ${DirichletBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FV PROPERTY LABELS "Python fv diffusion 3D SQUARE heating structured squares coreflows Dirichlet")  
 add_test(DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_2D_SQUARE.py ${FE} ${DirichletBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_2D_SQUARE_Dirichlet_FE PROPERTY LABELS "Python fe diffusion 3D SQUARE heating structured triangles coreflows Dirichlet")  
 add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py ${FV} ${NeumannBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D BALL heating unstructured tetrahedra coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FV PROPERTY LABELS "Python fv diffusion 3D BALL heating unstructured tetrahedra coreflows Neumann")  
 add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Neumann.py ${FE} ${NeumannBC})
-  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D BALL heating unstructured tetrahedra coreflows")  
+  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Neumann_FE PROPERTY LABELS "Python fe diffusion 3D BALL heating unstructured tetrahedra coreflows Neumann")  
+add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Dirichet_FV ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Dirichlet.py ${FV} ${NeumannBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Dirichet_FV PROPERTY LABELS "Python fv diffusion 3D BALL heating unstructured tetrahedra coreflows Dirichlet")  
+add_test(DiffusionEquation/DiffusionEquation_3D_BALL_Dirichet_FE ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/DiffusionEquation/DiffusionEquation_3D_BALL_Dirichlet.py ${FE} ${NeumannBC})
+  set_property (TEST DiffusionEquation/DiffusionEquation_3D_BALL_Dirichet_FE PROPERTY LABELS "Python fe diffusion 3D BALL heating unstructured tetrahedra coreflows Dirichlet")  
 
 
 CreatePythonTest(TransportEquation/TransportEquation_1DHeatedChannel.py "Python fv transport 1D heating structured coreflows")
