Added new vaidation test for wave system

--- a/CDMATH/tests/validation/CMakeLists.txt
+++ b/CDMATH/tests/validation/CMakeLists.txt
@@ -102,6 +102,7 @@ WaveSystem_stationary_source/2DWaveSystemUpwindDeformedQuadrangles
 WaveSystem_LinearSolvers/2DTriangles
 WaveSystem_LinearSolvers/2DSquares
 ReferenceSolutions/
+WaveSystemRiemannProblemComparison/
 EulerEquations/1DToroBenchmark
 EulerEquations/1DEulerIsentropicMeshRefinement
 EulerEquations/1DEulerIsentropicIncreaseSoundSpeed
