--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -130,20 +130,39 @@ CreateTestExecAndInstall(IsothermalTwoFluid_2DVidangeReservoir.cxx  "${libs_for_
 add_executable(SaddlePointLinearSolver.exe PETSc/SaddlePointLinearSolver.c)
 target_link_libraries(SaddlePointLinearSolver.exe ${PETSC_LIBRARIES} )
 install(TARGETS SaddlePointLinearSolver.exe DESTINATION share/examples)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/PETSc DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+    SET(MATRIX_FILE  PETSc/Kershaw2D_PolyMAC_1.petsc  )
+    SET(nu  612  )
+    SET(np  289  )
+add_test(NAME SaddlePointLinearSolver_2DKershaw.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu >> res.txt)     
+set_property (TEST SaddlePointLinearSolver_2DKershaw.exe PROPERTY LABELS "C++ PETSC multigrid")     
  
+    SET(MATRIX_FILE  PETSc/Cartesian_PolyMAC_1.petsc  )
+    SET(nu  40  )
+    SET(np  16  )
+add_test(NAME SaddlePointLinearSolver_2DCartesian.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu >> res.txt)     
+set_property (TEST SaddlePointLinearSolver_2DCartesian.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
+    SET(MATRIX_FILE  PETSc/mTetra_PolyMAC_1.petsc  )
+    SET(nu  68  )
+    SET(np  40  )
+add_test(NAME SaddlePointLinearSolver_2DTriangle.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu >> res.txt)     
+set_property (TEST SaddlePointLinearSolver_2DTriangle.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
 add_executable(WaveSystem_FV_SphericalExplosion_CDMATH.exe WaveSystem_FV_SphericalExplosion_CDMATH.cxx)
 target_link_libraries(WaveSystem_FV_SphericalExplosion_CDMATH.exe CoreFlowsLibs )
 install(TARGETS WaveSystem_FV_SphericalExplosion_CDMATH.exe DESTINATION share/examples)
 
 #Generate several tests from the same executable WaveSystem_FV_SphericalExplosion_CDMATH.exe (change mesh name)
-add_test(NAME WaveSystem_2DFV_SphericalExplosion_CDMATH_SQUARE         COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe")     
-set_property (TEST WaveSystem_2DFV_SphericalExplosion_CDMATH_SQUARE PROPERTY LABELS "C++ wave 2D fv riemann squares SQUARE cdmath")     
-add_test(NAME WaveSystem_2DFV_SphericalExplosion_CDMATH_HEXAGON        COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshHexagonWithTriangles10.med)
-set_property (TEST WaveSystem_2DFV_SphericalExplosion_CDMATH_HEXAGON PROPERTY LABELS "C++ wave 2D fv riemann triangles HEXAGON cdmath")     
-add_test(NAME WaveSystem_3DFV_SphericalExplosion_CDMATH_CUBE           COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshCube.med)     
-set_property (TEST WaveSystem_3DFV_SphericalExplosion_CDMATH_CUBE PROPERTY LABELS "C++ wave 3D fv riemann tetrahedra CUBE cdmath")     
-add_test(NAME WaveSystem_3DFV_SphericalExplosion_CDMATH_TETRAHEDRON    COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshTetrahedron10.med)     
-set_property (TEST WaveSystem_3DFV_SphericalExplosion_CDMATH_TETRAHEDRON PROPERTY LABELS "C++ wave 3D fv riemann tetrahedra TETRAHEDRON cdmath")     
+add_test(NAME WaveSystem_2DFV_SphericalExplosion_CDMATH_SQUARE.exe         COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe")     
+set_property (TEST WaveSystem_2DFV_SphericalExplosion_CDMATH_SQUARE.exe PROPERTY LABELS "C++ wave 2D fv riemann squares SQUARE cdmath")     
+add_test(NAME WaveSystem_2DFV_SphericalExplosion_CDMATH_HEXAGON.exe        COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshHexagonWithTriangles10.med)
+set_property (TEST WaveSystem_2DFV_SphericalExplosion_CDMATH_HEXAGON.exe PROPERTY LABELS "C++ wave 2D fv riemann triangles HEXAGON cdmath")     
+add_test(NAME WaveSystem_3DFV_SphericalExplosion_CDMATH_CUBE.exe           COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshCube.med)     
+set_property (TEST WaveSystem_3DFV_SphericalExplosion_CDMATH_CUBE.exe PROPERTY LABELS "C++ wave 3D fv riemann tetrahedra CUBE cdmath")     
+add_test(NAME WaveSystem_3DFV_SphericalExplosion_CDMATH_TETRAHEDRON.exe    COMMAND "./WaveSystem_FV_SphericalExplosion_CDMATH.exe" resources/meshTetrahedron10.med)     
+set_property (TEST WaveSystem_3DFV_SphericalExplosion_CDMATH_TETRAHEDRON.exe PROPERTY LABELS "C++ wave 3D fv riemann tetrahedra TETRAHEDRON cdmath")     
 
 if( SOLVERLAB_WITH_MPI )#Tests parallèles
   add_executable(MEDCouplingSendRecvFieldSameMesh_MPI.exe MEDCouplingSendRecvFieldSameMesh_MPI.cxx)
