--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -162,6 +162,41 @@ set_property (TEST SaddlePointLinearSolver_3DHexa.exe PROPERTY LABELS "C++ PETSC
 add_test(NAME SaddlePointLinearSolver_3DKershaw.exe         COMMAND "./SaddlePointLinearSolver.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type lower -fieldsplit_0_ksp_type gmres -fieldsplit_0_pc_type gamg -fieldsplit_0_pc_gamg_type agg -fieldsplit_1_ksp_type preonly -fieldsplit_1_pc_type lu >> res.txt)     
 set_property (TEST SaddlePointLinearSolver_3DKershaw.exe PROPERTY LABELS "C++ PETSC multigrid")     
 
+add_executable(SaddlePointLinearSolver_par.exe PETSc/SaddlePointLinearSolver_par.c)
+target_link_libraries(SaddlePointLinearSolver_par.exe ${PETSC_LIBRARIES} )
+install(TARGETS SaddlePointLinearSolver_par.exe DESTINATION share/examples)
+
+    SET(MATRIX_FILE  PETSc/Kershaw2D_PolyMAC_1.petsc  )
+    SET(nu  612  )
+    SET(np  289  )
+add_test(NAME SaddlePointLinearSolver_2DKershaw_par.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+set_property (TEST SaddlePointLinearSolver_2DKershaw_par.exe PROPERTY LABELS "C++ PETSC multigrid")     
+ 
+    SET(MATRIX_FILE  PETSc/Cartesian_PolyMAC_1.petsc  )
+    SET(nu  40  )
+    SET(np  16  )
+add_test(NAME SaddlePointLinearSolver_2DCartesian_par.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+set_property (TEST SaddlePointLinearSolver_2DKershaw_par.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
+    SET(MATRIX_FILE  PETSc/Tetra_PolyMAC_1.petsc  )
+    SET(nu  500  )
+    SET(np  215  )
+add_test(NAME SaddlePointLinearSolver_3DTetra_par.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+set_property (TEST SaddlePointLinearSolver_2DKershaw_par.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
+    SET(MATRIX_FILE  PETSc/Hexa_PolyMAC_1.petsc  )
+    SET(nu  36  )
+    SET(np  8  )
+add_test(NAME SaddlePointLinearSolver_3DHexa_par.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+set_property (TEST SaddlePointLinearSolver_2DKershaw_par.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
+    SET(MATRIX_FILE  PETSc/Kershaw_PolyMAC_1.petsc  )
+    SET(nu  1728  )
+    SET(np  512  )
+add_test(NAME SaddlePointLinearSolver_3DKershaw_par.exe         COMMAND "./SaddlePointLinearSolver_par.exe" -f0 ${MATRIX_FILE} -nU ${nu} -nP ${np} -pc_fieldsplit_type schur -pc_fieldsplit_schur_fact_type upper -fieldsplit_1_ksp_type gmres -fieldsplit_1_pc_type gamg -fieldsplit_1_pc_gamg_type agg -fieldsplit_0_ksp_type preonly -fieldsplit_0_pc_type lu )     
+set_property (TEST SaddlePointLinearSolver_2DKershaw_par.exe PROPERTY LABELS "C++ PETSC multigrid")     
+
+
 add_executable(WaveSystem_FV_SphericalExplosion_CDMATH.exe WaveSystem_FV_SphericalExplosion_CDMATH.cxx)
 target_link_libraries(WaveSystem_FV_SphericalExplosion_CDMATH.exe CoreFlowsLibs )
 install(TARGETS WaveSystem_FV_SphericalExplosion_CDMATH.exe DESTINATION share/examples)
